--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,8 @@
-/* 
-   
-    Website     Yve YANG
-    Version     0.1 Beta
+/*   
+    Website     YveYANG
+    Version     0.9
     Design      Pianpian He & Max Harvey
     Code        Matt Wolff   
-
     -------------------------------------- */
 
 @import url(fonts/fonts.css);
@@ -533,6 +531,7 @@ a.black:hover {
 }
 
 .text h1 {
+    font-style: italic;
     margin-bottom: 1.2em;
 }
 
