--- a/exhibitions/_showUpcoming.slim
+++ b/exhibitions/_showUpcoming.slim
@@ -1,9 +1,10 @@
-h1 Upcoming
-a class="show" href="<!-- @path #{exhibition.url}.html -->"
-    ul class="listing"
-        li 
-            span = exhibition.startDate
-            span &ndash;
-            span = exhibition.endDate
-        li = exhibition.artist
-        li = exhibition.title
+div class="year upcoming conceal"
+    h1 Upcoming
+    a class="show" href="<!-- @path #{exhibition.url}.html -->"
+        ul class="listing"
+            li 
+                span = exhibition.startDate
+                span &ndash;
+                span = exhibition.endDate
+            li = exhibition.artist
+            li = exhibition.title
