--- a/index.slim
+++ b/index.slim
@@ -12,11 +12,25 @@ html
         a class="logo" href="<!-- @path index.slim -->"
             img src="<!-- @path yve-yang-logo.svg -->"     
         - for exhibition in contentful.exhibition.order("showNumber", "desc").select { |exhibition| exhibition.current? }
-            <!-- @include _homeHeader -->    
+            div class="header"
+                div class="row greyFind"
+                    div class="col-3 offset-3 title"
+                        a href="<!-- @path #{exhibition.url}.html -->" class="headGrey" = exhibition.title
+                    div class="col-2 artist"
+                        a href="<!-- @path #{exhibition.url}.html -->"  class="headGrey" = exhibition.artist
+                    div class="col-2 date"
+                        a href="<!-- @path #{exhibition.url}.html -->"  class="headGrey" 
+                            span = exhibition.startDate
+                            span &ndash;
+                            span = exhibition.endDate      
         
             div class="gridWrap home"
                 div class="row"
-                    <!-- @include _home -->
+                    - for home in contentful.home
+                        - for exhibition in contentful.exhibition.order("showNumber", "desc").select { |exhibition| exhibition.current? }
+                                div class="col-5 offset-3 frontPage"
+                                    a href="<!-- @path #{exhibition.url}.html -->"
+                                        img src="#{home.image}"
             
         <!-- @include _homeMenu -->
         <!-- @include _form -->
