--- a/_index.slim
+++ b/_index.slim
@@ -31,6 +31,7 @@ html
                                 div class="col-5 offset-3 frontPage"
                                     a href="<!-- @path #{exhibition.url}.html -->"
                                         img src="#{home.image}"
+                                        p style="color:white" =home.title
             
         <!-- @include _homeMenu -->
         <!-- @include _form -->
