--- a/artists/artist.slim
+++ b/artists/artist.slim
@@ -11,7 +11,7 @@ html
         script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"
     
     body
-        a href="<!-- @path index.slim -->"
+        a href="http://www.yveyang.com"
             img class="logo" src="<!-- @path yve-yang-logo.svg -->"
 
         <!-- @include _artistsMenu -->
