--- a/exhibitions/_exhibitions.slim
+++ b/exhibitions/_exhibitions.slim
@@ -12,7 +12,7 @@ html
         <!-- @javascript stickyfill.js -->
     
     body
-        a href="<!-- @path index.slim -->"
+        a href="http://www.yveyang.com"
             img class="logo" src="<!-- @path yve-yang-logo.svg -->"
 
         <!-- @include _exhibitionHeader -->
