Cursor News Menu
Update News Menu for proper width and cursor display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,8 +553,13 @@ a.black:hover {
     }
 
 
-a.current.newShow{
+a.current.newsShow{
     display: block;
+    cursor:pointer;
+}
+
+.newsShow span {
+    cursor: pointer;
 }
 
 #newsData a{
