--- a/_mobileMenu.slim
+++ b/_mobileMenu.slim
@@ -2,10 +2,13 @@ div class="mobileMenuFour none"
     div class="mobileNav"
         div class="col-10"
             a id="mobEx" EXHIBITIONS
+            <!-- @include _mobileMenuExhibition -->
         div class="col-10"
             a id="mobArt" ARTISTS
+            <!-- @include _mobileMenuArtist -->
         div class="col-10"
             a href="<!-- @path about.slim -->" ABOUT
         div class="col-10"
             a id="mobNews" NEWS
+            <!-- @include _mobileMenuNews -->
     
