About Menu Update

--- a/about.slim
+++ b/about.slim
@@ -43,23 +43,26 @@ html
                 $('.mobileMenuFour').show();
                 $('.gridWrap').hide();
                 $('.mobileMenuClose').removeClass('none');
-                    // Hide All other Menus
+                    // Hide All SubMenus
                 $('.mobileMenuNews').hide();
                 $('.mobileMenuArt').hide();
                 $('.mobileMenuEx').hide();
                 });
 
             $('#mobEx').click(function() {
-                $('.mobileMenuFour').hide();
-                $('.mobileMenuEx').show();
+                $('.mobileMenuEx').toggle();
+                $('.mobileMenuNews').hide();
+                $('.mobileMenuArt').hide();
                 });
             $('#mobNews').click(function() {
-                $('.mobileMenuFour').hide();
-                $('.mobileMenuNews').show();
+                $('.mobileMenuNews').toggle();
+                $('.mobileMenuEx').hide();
+                $('.mobileMenuArt').hide();
                 });
             $('#mobArt').click(function() {
-                $('.mobileMenuFour').hide();
-                $('.mobileMenuArt').show();
+                $('.mobileMenuArt').toggle();
+                $('.mobileMenuNews').hide();
+                $('.mobileMenuEx').hide();
                 });    
 
             $('#mobileMenuClose').click(function() {
