New Exhibition Sort Method
Exhibitions link compiles the highest show number, either a current
show or the most recent past show…

--- a/_index.slim
+++ b/_index.slim
@@ -4,7 +4,9 @@ html
         title Yve YANG Gallery
         meta charset="utf-8"
         meta name="viewport" content="width=device-width, initial-scale=1.0"
-        link rel="icon" type="image/png"
+        link rel="icon" type="image/png" href="<!-- @path favicon.ico -->"
+        <!-- @stylesheet normalize -->
+        <!-- @stylesheet fonts -->
         <!-- @stylesheet style -->
         script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"
     
