--- a/_mobileMenu.slim
+++ b/_mobileMenu.slim
@@ -7,7 +7,7 @@ div class="mobileMenuFour none"
             a id="mobArt" ARTISTS
             <!-- @include _mobileMenuArtist -->
         div class="col-10"
-            a href="<!-- @path about.slim -->" ABOUT
+            a href="<!-- @path about.html -->" ABOUT
         div class="col-10"
             a id="mobNews" NEWS
             <!-- @include _mobileMenuNews -->
