--- a/exhibitions/_exhibitionMenu.slim
+++ b/exhibitions/_exhibitionMenu.slim
@@ -25,7 +25,7 @@ div class="menu"
             div class="col-10"
                 a href="<!-- @path artist.slim -->"  ARTISTS
             div class="col-10"
-                a href="<!-- @path about.slim -->"  ABOUT 
+                a href="<!-- @path about.html -->"  ABOUT 
             - for news in contentful.news
                 - if news.current?
                     div class="col-10 lastOf"
