--- a/_aboutMenu.slim
+++ b/_aboutMenu.slim
@@ -1,10 +1,9 @@
 div class="menu"
     div class="aboutNav"
         div class="top"
-            - for exhibition in contentful.exhibition
-                - if exhibition.current?
-                    div class="col-10"
-                        a class="exhibition headGrey" href="<!-- @path #{exhibition.url}.html -->"  EXHIBITIONS
+            - for exhibition in contentful.exhibition.order("showNumber", "desc").first(1)
+                div class="col-10 greyFind"
+                    a class="exhibition headGrey" href="exhibitions/#{exhibition.url}.html"  EXHIBITIONS
             div class="col-10"
                 a href="<!-- @path artist.slim -->"  ARTISTS
             div class="col-10"
