--- a/_homeMenu.slim
+++ b/_homeMenu.slim
@@ -1,13 +1,13 @@
 div class="menu"
     div class="homeNav"
-        - for exhibition in contentful.exhibition
-            - if exhibition.current?
-                div class="col-10 greyFind"
-                    a class="exhibition headGrey" href="exhibitions/#{exhibition.url}.html"  EXHIBITIONS
+        - for exhibition in contentful.exhibition.order("showNumber", "desc").first(1)
+            div class="col-10 greyFind"
+                a class="exhibition headGrey" href="exhibitions/#{exhibition.url}.html"  EXHIBITIONS
+            
         div class="col-10"
             a href="<!-- @path artist.slim -->"  ARTISTS
         div class="col-10"
-            a href="<!-- @path about.slim -->"  ABOUT
+            a href="<!-- @path about.html -->" ABOUT
         - for news in contentful.news
             - if news.current?
                 div class="col-10 exCol"
