--- a/news/_newsMenu.slim
+++ b/news/_newsMenu.slim
@@ -1,14 +1,14 @@
 div class="menu"
     div class="newsNav"
         div class="top"
-            - for exhibition in contentful.exhibition
-                - if exhibition.current?
-                    div class="col-10"
-                        a class="exhibition headGrey" href="<!-- @path #{exhibition.url}.html -->"  EXHIBITIONS
+            - for exhibition in contentful.exhibition.order("showNumber", "desc").first(1)
+                div class="col-10 greyFind"
+                    a class="exhibition headGrey" href="<!-- @path #{exhibition.url}.html -->"  EXHIBITIONS
+            
             div class="col-10"
                 a href="<!-- @path artist.slim -->"  ARTISTS
             div class="col-10"
-                a href="<!-- @path about.slim -->"  ABOUT
+                a href="<!-- @path about.html -->" ABOUT
             div class="col-10"
                 a NEWS    
             div id="newsData" class="col-10"
@@ -25,4 +25,4 @@ div class="menu"
                         - news_for_year.sort_by{|row| [row[:month], row[:day]] }.reverse.each do |news|
                             <!-- @include newsData -->
                 - if contentful.news.length > 22        
-                    div class="more" id="loadMore" More News...            
+                    div class="more" id="loadMore" More News...
